<resources>
    <string name="app_name">Quiz</string>
    <string name="text_test">Bài kiểu tra</string>
    <string name="text_question">Câu hỏi: %s</string>
    <string name="text_Ask">Trà lời: %s</string>
    <string name="button_A">A: %s</string>
    <string name="button_B">B: %s</string>
    <string name="button_C">C: %s</string>
    <string name="button_D">D: %s</string>
    <string name="title_activity_quiz2">QuizActivity2</string>
    <string name="Start_quiz">Start Quiz</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>